--- a/Lab2_DiegoRamirez_DanielElias/Lab2_DiegoRamirez_DanielElias.csproj
+++ b/Lab2_DiegoRamirez_DanielElias/Lab2_DiegoRamirez_DanielElias.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\LIbreriaRD\LIbreriaRD.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\csv\" />
+  </ItemGroup>
+
 </Project>
